Position static code example

--- a/css3/position/index.html
+++ b/css3/position/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <title>CSS3 - Position</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../global.css">
 </head>
 <body>
     <header>
-        <h1>Graion Frontend Training</h1>
+        <h1>Frontend Training</h1>
         <h2>CSS3 - Position</h2>
     </header>
+    <section class="code-example position-static">
+        <h3 class="css-property">position: static;</h3>
+        <p>
+            HTML elements are positioned <strong>static by default</strong>.
+        </p>
+        <p>
+            Static positioned elements are <strong>not affected</strong> by the top, bottom, left, and right properties.
+        </p>
+        <div class="css-element">
+            This element has <div class="css-property">position: static;</div>
+        </div>
+    </section>
 </body>
 </html>
