--- a/css3/position/index.html
+++ b/css3/position/index.html
@@ -14,13 +14,13 @@
     <section class="code-example position-static">
         <h3 class="css-property">position: static;</h3>
         <p>
-            HTML elements are positioned <strong>static by default</strong>.
+            Los elementos HTML son posicionados <strong>estáticos por defecto</strong>.
         </p>
         <p>
-            Static positioned elements are <strong>not affected</strong> by the top, bottom, left, and right properties.
+            Los elementos posicionados como estáticos <strong>no son afectados</strong> por las properties <span class="css-property">top, bottom, left, y right</span>.
         </p>
         <div class="css-element">
-            This element has <div class="css-property">position: static;</div>
+            Este elemento tiene <div class="css-property">position: static;</div>
         </div>
     </section>
 </body>
