Display block code example

--- a/css3/position/index.html
+++ b/css3/position/index.html
@@ -11,6 +11,14 @@
         <h1>Frontend Training</h1>
         <h2>CSS3 - Position</h2>
     </header>
+    <div class="summary">
+        <p>
+            La property <span class="code">position</span> especifica el método de posicionamiento para un elemento.
+        </p>
+        <p>
+            Junto con las properties <span class="code">top, right, bottom y left</span> determinan la ubicación final del elemento.
+        </p>
+    </div>
     <section class="code-example position-static">
         <h3 class="css-property">position: static;</h3>
         <p>
