Display inline code example

--- a/css3/display/index.html
+++ b/css3/display/index.html
@@ -45,5 +45,17 @@
             </div>
         </div>
     </section>
+    <section class="code-example display-inline">
+        <h3 class="css-property">display: inline;</h3>
+        <p>
+            Un elemento <span class="code">inline</span> <strong>no</strong> empieza en una nueva línea y <strong>solo ocupa el ancho que necesita</strong>.
+        </p>
+        <p>
+            Algunos elementos de tipo <span class="code">inline</span> son: <span class="code">span, a, img</span>
+        </p>
+        <div class="css-element">
+            Este elemento tiene <div class="css-property">display: inline;</div>
+        </div>
+    </section>
 </body>
 </ht
