Display inline-block code example

--- a/css3/display/index.html
+++ b/css3/display/index.html
@@ -53,8 +53,31 @@
         <p>
             Algunos elementos de tipo <span class="code">inline</span> son: <span class="code">span, a, img</span>
         </p>
+        <div class="alert">
+            No se puede forzar <span class="code">width y height</span> de estos elementos.
+        </div>
         <div class="css-element">
             Este elemento tiene <div class="css-property">display: inline;</div>
+        </div>
+    </section>
+    <section class="code-example display-inline-block">
+        <h3 class="css-property">display: inline-block;</h3>
+        <p>
+            Un elemento <span class="code">inline-block</span> es similar a un <span class="code">inline</span> con la diferencia que se puede establecer su <span class="code">width y height</span>.
+        </p>
+        <p>
+            Son muy útiles para definir columnas de un ancho fijo o grillas.
+        </p>
+        <div class="css-container-element">
+            <p>
+                Este elemento tiene <span class="css-property">white-space: nowrap;</span>
+            </p>
+            <div class="css-element">
+                Este elemento tiene <div class="css-property">display: inline-block; width: 250px;</div>
+            </div>
+            <div class="css-element">
+                Este elemento tiene <div class="css-property">display: inline-block; width: 250px;</div>
+            </div>
         </div>
     </section>
 </body>
