Adds hover state

--- a/css3/display/index.html
+++ b/css3/display/index.html
@@ -107,6 +107,12 @@
                 })();
             </script>
         </div>
+        <div class="css-element hover-toggle">
+            Este elemento tiene estado <div class="code">:hover</div>
+            <div class="hover-toggle-element">
+                Hiciste hover!
+            </div>
+        </div>
     </section>
 </body>
 </ht
