--- a/css3/display/index.html
+++ b/css3/display/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS3 - Position</title>
+    <title>CSS3 - Display</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../global.css">
 </head>
