--- a/css3/z-index/index.html
+++ b/css3/z-index/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS3 - Position</title>
+    <title>CSS3 - Z-index</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../global.css">
 </head>
@@ -28,7 +28,13 @@
     <section class="code-example z-index-auto">
         <h3 class="css-property">z-index: auto;</h3>
         <p>
-            La caja no establece un nuevo contexto de apilamiento. El nivel de apilamiento de la caja generada es el mismo que el de la caja padre.
+            Valor por defecto de <span class="code">z-index</span>.
+        </p>
+        <p>
+            Cuando todos los elementos tienen este valor, los elementos se van apilando en el eje z.
+        </p>
+        <p>
+            Por lo tanto, el último elemento creado será el que esté por encima del resto.
         </p>
         <div class="css-container-element">
             <p>
