Box model explanation

--- a/css3/box-model/index.html
+++ b/css3/box-model/index.html
@@ -30,6 +30,18 @@
         <div class="css-element">
             <h1>Inspect me!</h1>
         </div>
+        <p>
+            Explicación de las distintas partes:
+        </p>
+        <ul>
+            <li>Content - El contenido de la caja, donde aparecen el texto y las imágenes.</li>
+            <li>Padding - Define un área transparente alrededor del contenido. <strong>Usado para posicionar el contenido dentro de la caja.</strong></li>
+            <li>Border - Un borde que cubre el padding y el content.</li>
+            <li>Margin - Define un área transparente alrededor del borde. <strong>Usado para separar elementos entre sí.</strong></li>
+        </ul>
+        <div class="alert">
+            El <strong>background</strong> cubre toda el área del <div class="code">content y padding</div>.
+        </div>
     </section>
 </body>
 </html>
