--- a/css3/box-model/index.html
+++ b/css3/box-model/index.html
@@ -40,8 +40,24 @@
             <li>Margin - Define un área transparente alrededor del borde. <strong>Usado para separar elementos entre sí.</strong></li>
         </ul>
         <div class="alert">
-            El <strong>background</strong> cubre toda el área del <div class="code">content y padding</div>.
+            El <strong>background</strong> de un elemento abarca toda el área del <div class="code">content y padding</div>.
         </div>
+    </section>
+    <section class="code-example box-size">
+        <h3 class="css-property">Box Size</h3>
+        <p>
+            Cuando se definen las properties <span class="code">width y height</span> de un elemento, estas <strong>afectan solo el área del <span class="code">content</span></strong>.
+        </p>
+        <p>
+            Para calcular el tamaño total de un elemento, se deben agregar el <span class="code">padding, borders y margins</span> de dicho elemento.
+        </p>
+        <div class="css-element">
+            Este elemento tiene <div class="css-property">width: 300px; height: 100px;</div> y <div class="css-property">margin: 20px; padding: 20px; border: 20px solid;</div>
+        </div>
+        <p>
+            Calcular el área total del elemento anterior. <span class="hover-to-show">Hover para ver la solución!</span>
+            <span class="css-property">width: 360px; height: 160px;</span>
+        </p>
     </section>
 </body>
 </html>
