Improves colors for color blind people

--- a/css3/position/index.html
+++ b/css3/position/index.html
@@ -64,7 +64,7 @@
             Estos elementos son posicionados <strong>relativos a su padre posicionado más cercano</strong>.
         </p>
         <p>
-            Un elemento se dice "posicionado" cuando su posición es cualquiera menos la posición por defecto estática.
+            Un elemento se dice "posicionado" cuando su posición es cualquiera menos la posición por defecto <span class="code">static</span>.
         </p>
         <div class="alert">
             Si un elemento absoluto no tiene un padre posicionado, entonces se posiciona relativo al <span class="code">body</span> del documento y se mueve de acuerdo al scroll de la página.
