Nuevas Slides para Introducción

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -68,6 +68,14 @@ Ejemplo P, IMG.
                 </section>
 
                 <section>
+                    <h2>DOM (Document Object Model)</h2>
+                    <p>
+                        Provee una representación estructural del documento y define una forma de accederlo y modificar la estructura, contenido y estilos del documento, esencialmente conecta la página web con scripts o lenguajes de programación
+                    </p>
+                    <img src="img/Dom.jpg">
+                </section>
+
+                <section>
 					<h2>Partes de un Tag HTML</h2>
                     <img src="img/BasicTagStructure.png">
 				</section>
@@ -83,29 +91,34 @@ Ejemplo P, IMG.
                     </section>
                     <section>
                         <h2>Inline</h2>
-                        <p>Usando el atributo <b><i>style</i></b> dentro del tag. En este caso todo los estilos CSS son escritos dentro de este atributo</p>
+                        <p>Usando el atributo <strong><i>style</i></strong> dentro del tag. En este caso todo los estilos CSS son escritos dentro de este atributo. Esta forma de asignar estilos es considerada una <u>mala práctica</u></p>
                         <img src="img/InlineStyles.png">
                     </section>
                     <section>
                         <h2>ID</h2>
-                        <p>Se asocia el elemento con un <b><i>id</i></b> <u>único para ese tag</u>. Luego se definen los estilos que van a estar asociados a ese <b><i>id</i></b></p>
+                        <p>Se asocia el elemento con un <strong><i>id</i></strong> <u>único para ese tag</u>. Luego se definen los estilos que van a estar asociados a ese <strong><i>id</i></strong></p>
                         <img src="img/IdStyles.png">
                     </section>
                     <section>
                         <h2>Class</h2>
-                        <p>Es muy parecido al <b><i>id</i></b> solo que en este caso se útiliza el atributo <b><i>class</i></b>. Esta clase puede ser reutilizada las veces que se quiera en distintos elementos HTML</p>
+                        <p>Es muy parecido al <strong><i>id</i></strong> solo que en este caso se útiliza el atributo <strong><i>class</i></strong>. Esta clase puede ser reutilizada las veces que se quiera en distintos elementos HTML</p>
                         <img src="img/ClassStyles.png">
                     </section>
                     <section>
                         <h2>Tag <i>style</i></h2>
-                        <p>Dentro de este tag se podrá escribir código CSS que será interpretado por el navegador para darle estilos a los tags HTML que contengan las clases o ids especificados. La utilización de tags <b><i>style</i></b> es considerada una <u>mala práctica</u></p>
+                        <p>Dentro de este tag se podrá escribir código CSS que será interpretado por el navegador para darle estilos a los tags HTML que contengan las clases o ids especificados. La utilización de tags <strong><i>style</i></strong> es considerada una <u>mala práctica</u></p>
                         <img src="img/StyleTag.png">
                     </section>
                     <section>
                         <h2>Tag <i>link</i></h2>
-                        <p>El tag <b><i>link</i></b> nos permitirá importar archivos css externos, pudiendo tener por separado el CSS del HTML. Este <u>buena práctica</u> reemplazaría al tag <b><i>style</i></b></p>
+                        <p>El tag <strong><i>link</i></strong> nos permitirá importar archivos css externos, pudiendo tener por separado el CSS del HTML. Este <u>buena práctica</u> reemplazaría al tag <strong><i>style</i></strong></p>
                         <img src="img/ImportCSS.png">
                         <img src="img/CSSFile.png">
+                    </section>
+                     <section>
+                        <h2>Multiples Classes</h2>
+                        <p>El atributo <strong><i>class</i></strong> puede contener multiples clases, procesando las propiedades de ambas</p>
+                        <img src="img/MultipleClasses.png">
                     </section>
 				</section>
             </div>
