--- a/css3/position/index.html
+++ b/css3/position/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS3 - Position</title>
+    <title>CSS - Position</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../global.css">
 </head>
 <body>
     <header>
         <h1>Frontend Training</h1>
-        <h2>CSS3 - Position</h2>
+        <h2>CSS - Position</h2>
     </header>
     <div class="summary">
         <p>
@@ -43,7 +43,7 @@
             <strong>Es mala práctica</strong> usar las properties <span class="code">top, right, bottom y left</span> en un elemento relativo ya que se puede terminar con efectos no deseados. En general se puede usar otra solución para lograr el mismo efecto, como combinar <span class="code">padding y margin</span>.
         </div>
         <div class="css-element">
-            Este elemento tiene <div class="css-property">position: relative;</div> con <div class="css-property">left: 40px;</div>
+            Este elemento tiene <div class="css-property">position: relative;</div> con <div class="css-property">left: 80px;</div>
         </div>
     </section>
     <section class="code-example position-fixed">
@@ -72,7 +72,7 @@
         <div class="css-container-element">
             Este elemento tiene <div class="css-property">position: relative;</div>
             <div class="css-element">
-                Este elemento tiene <div class="css-property">position: absolute;</div> con <div class="css-property">bottom: 20px; left: 20px;</div>
+                Este elemento tiene <div class="css-property">position: absolute;</div> con <div class="css-property">bottom: 20px; left: 80px;</div>
             </div>
         </div>
     </section>
