--- a/css3/z-index/index.html
+++ b/css3/z-index/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS3 - Z-index</title>
+    <title>CSS - Z-index</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../global.css">
 </head>
 <body>
     <header>
         <h1>Frontend Training</h1>
-        <h2>CSS3 - Z-index</h2>
+        <h2>CSS - Z-index</h2>
     </header>
     <div class="summary">
         <p>
