--- a/css3/z-index/index.html
+++ b/css3/z-index/index.html
@@ -76,7 +76,7 @@
         <div class="css-container-element outer">
             <div class="css-container-element">
                 <p>
-                    Este elemento tiene <span class="css-property">position: relative; z-index: 0;</span>
+                    Este elemento tiene <span class="css-property">position: relative;</span> y establece un nuevo contexto de apilamiento con <span class="css-property">z-index: 0;</span>
                 </p>
                 <div class="css-element absolute-1">
                     1) Primer elemento con <div class="css-property">postition: absolute; z-index: 1;</div>
