--- a/css3/display/index.html
+++ b/css3/display/index.html
@@ -82,9 +82,7 @@
             Comunmente usada con JavaScript para hacer <strong>toggle (ocultar/mostrar) de elementos</strong> sin tener que eliminar y recrearlos (costoso para el DOM).
         </p>
         <div class="css-container-element">
-            <p>
-                <button type="button" class="toggle-element">Toggle Element</button>
-            </p>
+            <button type="button" class="toggle-element">Toggle Element</button>
             <div class="css-element css-toggle-element">
                 Este elemento tiene <div class="css-property">display: block;</div>
             </div>
@@ -92,7 +90,7 @@
                 (function () {
                     var button = document.getElementsByClassName('toggle-element')[0];
                     var element = document.getElementsByClassName('css-toggle-element')[0];
-                    var visible = true;
+                    var visible = false;
                     button.onclick = function () {
                         visible = !visible;
                         element.style.display = visible ? 'block' : 'none';
