--- a/css3/basic-html-elements/index.html
+++ b/css3/basic-html-elements/index.html
@@ -5,6 +5,7 @@
     <title>Basic HTML Elements</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../global.css">
+    <link rel="stylesheet" href="agate.css">
 </head>
 <body>
     <header>
@@ -15,11 +16,17 @@
         <div class="css-element">
             <h3 class="css-property">Headings</h3>
             <h1>h1. Header 1</h1>
+            <pre><code class="html">&lt;h1&gt;h1. Header 1&lt;/h1&gt;</code></pre>
             <h2>h2. Header 2</h2>
+            <pre><code class="html">&lt;h2&gt;h2. Header 2&lt;/h2&gt;</code></pre>
             <h3>h3. Header 3</h3>
+            <pre><code class="html">&lt;h3&gt;h3. Header 3&lt;/h3&gt;</code></pre>
             <h4>h4. Header 4</h4>
+            <pre><code class="html">&lt;h4&gt;h4. Header 4&lt;/h4&gt;</code></pre>
             <h5>h5. Header 5</h5>
+            <pre><code class="html">&lt;h5&gt;h5. Header 5&lt;/h5&gt;</code></pre>
             <h6>h6. Header 6</h6>
+            <pre><code class="html">&lt;h6&gt;h6. Header 6&lt;/h6&gt;</code></pre>
         </div>
     </div>
     <div class="paragraphs">
@@ -28,13 +35,30 @@
             <p class="align-left">
                 This paragraph is aligned to the left.
             </p>
+            <pre><code class="html">
+                &lt;p class="align-left"&gt;
+                    This paragraph is aligned to the left.
+                &lt;/p&gt;
+            </code></pre>
             <p class="align-center">
                 This paragraph is aligned to the center.
             </p>
+            <pre><code class="html">
+                &lt;p class="align-center"&gt;
+                    This paragraph is aligned to the center.
+                &lt;/p&gt;
+            </code></pre>
             <p class="align-right">
                 This paragraph is aligned to the right.
             </p>
+            <pre><code class="html">
+                &lt;p class="align-right"&gt;
+                    This paragraph is aligned to the right.
+                &lt;/p&gt;
+            </code></pre>
         </div>
     </div>
+    <script src="highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
