Forms code example

--- a/css3/basic-html-elements/index.html
+++ b/css3/basic-html-elements/index.html
@@ -58,6 +58,37 @@
             </code></pre>
         </div>
     </div>
+    <div class="forms">
+        <div class="css-element">
+            <h3 class="css-property">Forms</h3>
+            <form>
+                <input type="text" placeholder="Usuario">
+                <input type="password" placeholder="Contraseña">
+                <select name="select">
+                    <option value="1">Uno</option>
+                    <option value="2">Dos</option>
+                    <option value="3">Tres</option>
+                </select>
+                <label><input type="radio" name="gender" value="male" checked> Male</label>
+                <label><input type="radio" name="gender" value="female"> Female</label>
+                <label><input type="radio" name="gender" value="other"> Other</label>
+            </form>
+            <pre><code class="html">
+                &lt;form&gt;
+                    &lt;input type=&quot;text&quot; placeholder=&quot;Usuario&quot;&gt;
+                    &lt;input type=&quot;password&quot; placeholder=&quot;Contrase&ntilde;a&quot;&gt;
+                    &lt;select name=&quot;select&quot;&gt;
+                        &lt;option value=&quot;1&quot;&gt;Uno&lt;/option&gt;
+                        &lt;option value=&quot;2&quot;&gt;Dos&lt;/option&gt;
+                        &lt;option value=&quot;3&quot;&gt;Tres&lt;/option&gt;
+                    &lt;/select&gt;
+                    &lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;gender&quot; value=&quot;male&quot; checked&gt; Male&lt;/label&gt;
+                    &lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;gender&quot; value=&quot;female&quot;&gt; Female&lt;/label&gt;
+                    &lt;label&gt;&lt;input type=&quot;radio&quot; name=&quot;gender&quot; value=&quot;other&quot;&gt; Other&lt;/label&gt;
+                &lt;/form&gt;
+            </code></pre>
+        </div>
+    </div>
     <script src="highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </body>
