--- a/css3/basic-html-elements/index.html
+++ b/css3/basic-html-elements/index.html
@@ -5,7 +5,7 @@
     <title>Basic HTML Elements</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="agate.css">
+    <link rel="stylesheet" href="../agate.css">
 </head>
 <body>
     <header>
@@ -89,7 +89,46 @@
             </code></pre>
         </div>
     </div>
-    <script src="highlight.pack.js"></script>
+    <div class="other" id="other">
+        <div class="css-element">
+            <h3 class="css-property">Otros elementos comunes</h3>
+            <p>
+                <a href="#other">Link</a>
+            </p>
+            <pre><code class="html">
+                &lt;a href=&quot;#other&quot;&gt;
+                    Link
+                &lt;/a&gt;
+            </code></pre>
+            <ul>
+                <li>Uno</li>
+                <li>Dos</li>
+                <li>Tres</li>
+            </ul>
+            <pre><code class="html">
+                &lt;ul&gt;
+                    &lt;li&gt;Uno&lt;/li&gt;
+                    &lt;li&gt;Dos&lt;/li&gt;
+                    &lt;li&gt;Tres&lt;/li&gt;
+                &lt;/ul&gt;
+            </code></pre>
+            <img src="http://66.media.tumblr.com/aea79d3c26acdcfe325e94c7ae251717/tumblr_inline_nqmfxalvCS1qk1op9_500.gif" alt="Ricardo Fort">
+            <img src="html_tat.jpg" alt="HTML Tatoo">
+            <pre><code class="html">
+                &lt;img src=&quot;http://66.media.tumblr.com/aea79d3c26acdcfe325e94c7ae251717/tumblr_inline_nqmfxalvCS1qk1op9_500.gif&quot; alt=&quot;Ricardo Fort&quot;&gt;
+                &lt;img src=&quot;html_tat.jpg&quot; alt=&quot;HTML Tatoo&quot;&gt;
+            </code></pre>
+            <div>
+                Esto es un <span>&lt;div&gt;</span> con un <span>&lt;span&gt;</span>.
+            </div>
+            <pre><code class="html">
+                &lt;div&gt;
+                    Esto es un &lt;span&gt;&amp;lt;div&amp;gt;&lt;/span&gt; con un &lt;span&gt;&amp;lt;span&amp;gt;&lt;/span&gt;.
+                &lt;/div&gt;
+            </code></pre>
+        </div>
+    </div>
+    <script src="../highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
